framec_tests/language_specific/rust/v3_outline/negative/test_action_with_frame.frm
@target rust

action X
{
-> $Y
}

